<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Radio Streamer</string>
    <string name="add_station">Add station</string>
    <string name="station_name">Station name</string>
    <string name="stream_url">Stream URL</string>
    <string name="add">Add</string>
    <string name="delete_station">Delete station</string>
    <string name="delete">Delete</string>
    <string name="delete_confirm">Remove this station from your list?</string>
    <string name="empty_message">No stations yet.\nTap + to add a stream URL.</string>
    <string name="play_pause">Play / pause</string>
    <string name="fields_required">Name and URL are required</string>
    <string name="stream_error">Could not play this stream</string>
    <string name="player_error">Could not start the player</string>
    <string name="tab_radio">Radio</string>
    <string name="tab_podcasts">Podcasts</string>
    <string name="add_podcast">Add podcast</string>
    <string name="podcast_url_hint">RSS feed URL, page URL, or search name</string>
    <string name="search_hint">Search podcasts</string>
    <string name="select_podcast">Select a podcast</string>
    <string name="adding_podcast">Adding podcast…</string>
    <string name="podcast_added">Podcast added</string>
    <string name="podcast_error">Could not add this podcast</string>
    <string name="no_episodes">No episodes found</string>
    <string name="empty_podcasts">No podcasts yet.\nTap + to search or add an RSS feed.</string>
    <string name="back">Back</string>
</resources>
